<resources>
    <!-- App info -->
    <string name="app_name">SOLD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu items -->
    <string name="item_home">Home</string>
    <string name="item_profile">Profile</string>
    <string name="item_orders">Orders</string>

    <!-- Defaults -->
    <string name="def_img_desc">image</string>
    <string name="your_city">Your City</string>
    <string name="wwyltd">What would you like to do?</string>

    <!-- Dashboard items -->
    <string name="item_phone">Phone</string>
    <string name="item_tablet">Tablet</string>
    <string name="item_smart_watch">Smart Watch</string>
    <string name="item_recycle">Recycle</string>


</resources>
