<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutParent"
    style="@style/LayoutParent"
    tools:context=".frags.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            android:background="@color/colorToolbarBackground"
            android:elevation="@dimen/elevation_toolbar"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/layoutLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/padding"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding_half"
                        android:contentDescription="@string/def_img_desc"
                        android:src="@drawable/ic_location_24"
                        android:tint="@color/colorToolbarForeground" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextRegular"
                            android:text="@string/your_city"
                            android:textSize="@dimen/small_text" />

                        <TextView
                            android:id="@+id/textCity"
                            style="@style/TextRegular"
                            android:drawableEnd="@drawable/ic_change_location_24"
                            android:text="Burdwan"
                            android:textSize="@dimen/normal_text" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/btnNotif"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/def_img_desc"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:tint="@color/colorToolbarForeground"
                    app:srcCompat="@drawable/ic_notifications_24" />

            </RelativeLayout>

            <View style="@style/SeparatorHorz" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_slider"
                android:gravity="center">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/sliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.rd.PageIndicatorView
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/padding_double"
                    android:padding="6dp"
                    app:piv_animationType="fill"
                    app:piv_dynamicCount="true"
                    app:piv_interactiveAnimation="true"
                    app:piv_padding="8dp"
                    app:piv_radius="4dp"
                    app:piv_selectedColor="@color/white"
                    app:piv_unselectedColor="@color/white"
                    app:piv_viewPager="@id/sliderViewPager" />

            </RelativeLayout>

            <TextView
                style="@style/TextBold"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:text="@string/wwyltd"
                android:textSize="@dimen/large_text" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding"
                android:translationZ="@dimen/elevation_dashboard"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/radius_dashboard"
                app:cardElevation="@dimen/elevation_z_dashboard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/itemPhone"
                            style="@style/DashboardItem">

                            <ImageView
                                style="@style/DashboardItemIcon"
                                android:contentDescription="@string/def_img_desc"
                                android:src="@drawable/ic_item_phone" />

                            <TextView
                                style="@style/DashboardItemTitle"
                                android:text="@string/item_phone" />

                        </LinearLayout>

                        <View style="@style/SeparatorDashboardVert" />

                        <LinearLayout
                            android:id="@+id/itemTablet"
                            style="@style/DashboardItem">

                            <ImageView
                                style="@style/DashboardItemIcon"
                                android:contentDescription="@string/def_img_desc"
                                android:src="@drawable/ic_item_tablet" />

                            <TextView
                                style="@style/DashboardItemTitle"
                                android:text="@string/item_tablet" />

                        </LinearLayout>

                    </LinearLayout>

                    <View style="@style/SeparatorDashboardHorz" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/itemSmartWatch"
                            style="@style/DashboardItem">

                            <ImageView
                                style="@style/DashboardItemIcon"
                                android:contentDescription="@string/def_img_desc"
                                android:src="@drawable/ic_item_smart_watch" />

                            <TextView
                                style="@style/DashboardItemTitle"
                                android:text="@string/item_smart_watch" />

                        </LinearLayout>

                        <View style="@style/SeparatorDashboardVert" />

                        <LinearLayout
                            android:id="@+id/itemRecycle"
                            style="@style/DashboardItem">

                            <ImageView
                                style="@style/DashboardItemIcon"
                                android:contentDescription="@string/def_img_desc"
                                android:src="@drawable/ic_item_recycle" />

                            <TextView
                                style="@style/DashboardItemTitle"
                                android:text="@string/item_recycle" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>